--- a/scrimba_exercise/src/App.css
+++ b/scrimba_exercise/src/App.css
@@ -40,24 +40,21 @@ body {
 }
 
 .main {
+	display: flex;
+	flex-direction: column;
 	background-color: #282d35;
 	color: #ffffff;
 	flex-grow: 1;
+	gap: 2rem;
 }
 
-.title {
-	font-weight: 700;
+.joke {
+	background-color: rgba(255, 166, 0, 0.361);
+	padding: 0.5rem;
+	margin: 0 1rem;
 }
 
-.facts > li {
-	margin-top: 20px;
-}
-
-.facts > li::marker {
-	font-size: 1.4rem;
-	color: #61dafb;
-}
-
-.factContainer {
-	margin-left: 27px;
+.punchline {
+	color: orange;
+	text-align: right;
 }
